--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,14 +8,37 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        compiler: [gcc, clang]
 
+    steps:
+    - uses: actions/checkout@v3
+    - name: Cache build
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache
+          build
+        key: ${{ runner.os }}-build-${{ hashFiles('**/Makefile') }}
+        restore-keys: |
+          ${{ runner.os }}-build-
+    - name: Install dependencies
+      run: sudo apt-get install -y ${{ matrix.compiler }}
+    - name: Compile
+      run: make CC=${{ matrix.compiler }}
+    - name: Run tests
+      run: make check
+    - name: Run distcheck
+      run: make distcheck
+
+  lint:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - uses: actions/checkout@v3
+    - name: Install dependencies
+      run: sudo apt-get install -y cppcheck
+    - name: Run cppcheck
+      run: cppcheck --enable=all .
